card-align-ment-fixed

--- a/style.css
+++ b/style.css
@@ -485,7 +485,7 @@ input::placeholder {
   .bg-card {
     background-color: white;
     border: 1px solid #e9e9e9;
-    margin-top: -400px;
+    margin-top: -380px;
   }
 }
 
